lib/brevity/parsing/dynamic.treetop
module Brevity

grammar Dynamic
  rule dynamic
    (dynamic_level dynamic_change) / dynamic_level / dynamic_change
  end
  
  rule dynamic_change
    ("<" / ">")
  end
  
  rule dynamic_level
    ("ppp" / "pp" / "p" / "mp" / "mf" / "fff" / "ff" / "f")
  end
end

end
